membuar tombol cetak struk

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <h2>Kasir Toko</h2>
    
    <button onclick="proses()">input barang</button>
-   <button onclick="cetak()">Cetak struk</button>
+   <button onclick="cetak()"disabled>Cetak struk</button>
    <div id="hasil"></div>
  </div>
 
